Fix: handle proto type instead of schema on Lineage API (#57)
* fix: handle proto type instead of schema on Lineage API

* refactor: lint issue

---------
